@@ -1,3 +1,8 @@
+2017-01-20  Marek Polacek  <polacek@redhat.com>
+
+	PR c/79152
+	* c-c++-common/Wimplicit-fallthrough-35.c: New test.
+
 2017-01-20  Thomas Preud'homme  <thomas.preudhomme@arm.com>
 
 	* lib/target-supports.exp (check_configured_with): New procedure.
